# VirtualSecretary

./: .gitignore  404.html  CNAME  README.md  build_appimage.sh  download.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: build-doc.yml
Filter API/: Instagram.html  carddav.html  emails.html  your-own-protocols.html
api/: SUMMARY.html  index.html
api/core/: batching.html  connectors.html  crawler.html  database.html  deduplicator.html  facebook-login.html  language.html  network.html  nlp.html  parser.html  patterns.html  pdf.html  search.html  secretary.html  types.html  utils.html
api/protocols/: carddav_server.html  imap_object.html  imap_server.html  instagram_server.html  (+1 more)
assets/: material.css
background/: 1-why.html  2-Proposed-workflow.html  3-Authentication.html  4-Risk-analysis.html
data/: index.md
docs/: index.md  why.md
models/: index.md
recipe/: requirements-crawler.txt  requirements-dev.txt  requirements-email.txt  requirements-ml.txt  requirements.txt  virtualsecretary.appdata.xml  virtualsecretary.desktop
scripts/: gen_api_pages.py
search/: search_index.js  search_index.json
src/: __init__.py  connectors.py  facebook-login.py  mailserver.py  main.py  nlp.py  secretary.py  test-nlp.py  utils.py
starting/: 1-install.html  2-configure.html  3-run.html  4-example-filters.html  5-writing-filters.html  6-crawling-pages.html  7-build-your-own-search-engine.html  8-nlp.html  index.html
virtualsecretary/: connectors.py  main.py  secretary.py  test-nlp.py
(+89 files in other folders)
